2008-05-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* t/GdkProperty.t
	* xs/GdkProperty.xs: Overload '!=' for GdkAtoms.  Patch by Kevin
	Ryde.

2008-05-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkWindow.xs: Add documentation for Gtk2::Gdk::Window::new.
	Patch by Kevin Ryde.

	* t/GdkWindow.t
	* xs/GdkWindow.xs (SvGdkWindowAttrReal): Use sv_2bool instead of
	SvUV to convert override_redirect values.

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs (gtk2perl_tree_model_iter_has_child): Accept
	all the usual boolean values for the return value of
	ITER_HAS_CHILD.

	* t/PangoLayout.t: Fix test failure on newer pango versions.

2008-05-04  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkTreeView.xs: Describe the return values of
	get_visible_range and get_tooltip_context.  Patch by Kevin Ryde.

	* xs/GtkTreeModel.xs: In the POD section about tree iterators, add
	a paragraph explaining how data put into iterators needs to be
	kept alive by the model.  Patch by Kevin Ryde.

2008-04-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkDisplay.t
	* xs/GdkDisplay.xs: Allow undef for the display name parameter of
	Gtk2::Gdk::Display::open.  Patch by Kevin Ryde.

2008-03-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.182.

2008-03-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkScaleButton.xs: NULL-terminate the icon list passed to
	gtk_scale_button_new and gtk_scale_button_set_icons.

	* xs/GtkBuildable.xs (gtk2perl_buildable_custom_tag_start): Don't
	declare variables after expressions.

	* Makefile.PL: Depend on ExtUtils::Depends 0.300 and thereby void
	the need for the find_extra_libs stuff.

	* Gtk2/t/Gdk.t
	* Gtk2/t/GdkDisplay.t
	* Gtk2/t/GdkInput.t
	* Gtk2/t/GdkProperty.t
	* Gtk2/t/GdkSelection.t
	* Gtk2/t/GdkWindow.t
	* Gtk2/t/GtkFontSelection.t
	* Gtk2/t/GtkIconTheme.t
	* Gtk2/t/GtkIconView.t
	* Gtk2/t/GtkSocket-GtkPlug.t
	* Gtk2/t/GtkStatusIcon.t
	* Gtk2/t/GtkTreeView.t