@@ -1,3 +1,4 @@
+#!/usr/bin/perl
 #
 # $Header$
 #
@@ -51,6 +52,9 @@ SKIP: {
 	my $icon_uri  = 'file://' . $icon_file;
 
 	$manager->add_item($icon_uri);
+	# add_item() is asynchronous, so let the main loop spin for a while
+	run_main while !$manager->get_items;
+
 	ok($manager->has_item($icon_uri), 'check add item');
 
 	$manager->move_item($icon_uri, $icon_uri . '.bak');
